  - ... whatever else you can think of. As long as it fits into a
    =Tensor[T]=, you can now place it into a DF!
  See XXX for a short introduction on the feature.
* v0.2.3
- =select= now respects the order of the given columns, i.e. the order
  of the columns in the resulting DF are in the order of the given
  columns
- add =relocate= to change the column order of one or more keys
* v0.2.2
- fix CSV parsing for files with fully empty columns
- allow printing of columns of kind =colNone=
- add filename as title to =showBrowser= calls  
* v0.2.1
- fix regression when calling =arrange= with purely column references
  to constant columns
* v0.2.0
- constant =DataFrame= columns have seen improvements. Before most
  operations on them would convert them to a non-constant column,
  often forced to convert to an object column. Now, most operations
  (that make sense) are supported on constants themselves and if a
  non-constant conversion is required, it aims to use the type
  corresponding to the underlying =Value= kind of the constant. That
  way conversions of constants to full columns should now lead to
  native (float, int, string, bool) tensors (unless an operation with
  another native, incompatible type is performed)
- some bugs were fixed that could cause reference semantics of
  dataframes to shine through when using =filter=
- *BREAKING*: the =toValueKind= procedure now takes a =Column= instead
  of a =ColumnKind=. This is to be able to handle the constant to full
  conversion properly. Note: A deprecated variant of the former
  version is still around!
- add =filterToIdx=, which takes a DF and a sequence / tensor of
  integers. The procedure will keep only those rows of the DF whose
  indices are part of the seq/Tensor
- slight performance improvements for the parsing of CSV files (larger
  for string heavy files) by avoiding an unnecessary =newString= call
  (yeah, =setLen= resizes for you if needed...)